@startuml
skinparam classAttributeIconSize 0

abstract class State {
    - balance: double
    - miles : double
    --
    # State(client: Client)
    # State(state: State)
    # setState(state: State): void
    + getBalance(): double
    + getMiles(): double
    + depositCash(amount: double): void
    + depositMiles(amount: double): void
    + withdrawCash(amount: double): boolean
    + withdrawMiles(amount: double): boolean
    {abstract} + getMilesCoefficient(): double
    {abstract} # checkStateChange() : void
    {abstract} + toString() : String
    {abstract} + getColor() : Color
}

class Silver {
    - {static} MILES_COEFFICIENT = 0.1 : double
    --
    + Silver(client: Client)
    # Silver(state: State)
    + getMilesCoefficient(): double
    # checkStateChange(): void
    + toString(): String
    + getColor(): Color
}

class Gold {
    - {static} MILES_COEFFICIENT = 0.5 : double
    - {static} GOLD_MILES_THRESHOLD = 1_000 : int
    --
    # Gold(state: State)
    + getMilesCoefficient(): double
    {static} # checkThreshold(): boolean
    # checkStateChange(): void
    + toString(): String
    + getColor(): Color
}

class Platinum {
    - {static} MILES_COEFFICIENT = 1 : double
    - {static} Platinum_MILES_THRESHOLD = 10_000 : int
    --
    # Platinum(state: State)
    + getMilesCoefficient(): double
    {static} # checkThreshold(): boolean
    # checkStateChange(): void
    + toString(): String
    + getColor(): Color
}

class PermanentPlatinum {
    - {static} MILES_COEFFICIENT = 1 : double
    - {static} PERMANENT_PLATINUM_CREDIT_THRESHOLD = 100_000 : int
    --
    # PermanentPlatinum(state: State)
    + getMilesCoefficient(): double
    {static} # checkThreshold(): boolean
    # checkStateChange(): void
    + toString(): String
    + getColor(): Color
}

State <|-- Silver
State <|-- Gold
State <|-- Platinum
State <|-left- PermanentPlatinum

abstract class Subject<T extends Subject<?>> {
    {abstract}+ attachObserver(observer: Observer<T>): void
    {abstract}+ detachObserver(observer: Observer<T>): void
    {abstract}+ notifyObservers(): void
}

interface Observer<T extends Subject<?>> {
    {abstract}+ update(subject: T): void
}

class Client {
    - lastName: String
    - firstName: String
    - id : int
    - lastAction : String
    {static} - nextId : int
    --
    + Client(lastName: String, firstName: String)
    + bookFlightCash(flight: Flight, ticketType: TicketType): void
    + bookFlightMiles(flight: Flight, ticketType: TicketType): void
    + getLastName(): String
    + getFirstName(): String
    + getId(): int
    + getLastAction(): String
    + getBalance(): double
    + getMiles(): double
    + getState(): State
    + setState(state: State): void
    + depositCash(amount: double): void
    + depositMiles(amount: double): void
    + withdrawCash(amount: double): boolean
    + withdrawMiles(amount: double): boolean
    + toString(): String
    + attachObserver(observer: Observer<Client>): void
    + detachObserver(observer: Observer<Client>): void
    + notifyObservers(): void
}

class Flight {
    - name : String
    - distance : double
    - price : double
    --
    + Flight(name: String, distance: double, price: double)
    + name(): String
    + distance(): double
    + price(): double
    + toString(): String
}

enum TicketType {
    ECONOMY("Economy", 1, 1)
    BUSINESS("Business", 2, 5)
    FIRST("First", 5, 30)
    --
    - name: String
    - cashCoefficient: int
    - milesCoefficient: int
    --
    TicketType(name: String, cashCoefficient: int, milesCoefficient: int)
    + getName(): String
    + getCashCoefficient(): int
    + getMilesCoefficient(): int
}

class JFrame {}

class Main {}

class MainFrame {
    {static} - WIDTH = 500 : int
    {static} - HEIGHT = 500 : int
    - selectedClient : Client;
    --
    + MainFrame(clients: Client[], flights: Flight[])
    - createClientPanel(): void
    - createCreditsPanel(): void
    - createFlightPanel(): void
    - createActionPanel(): void
}

class ClientDetailFrame {
   {static} - WIDTH = 300 : int
   {static} - HEIGHT = 200 : int
   - lastNameLabel : JLabel
   - firstNameLabel : JLabel
   - creditsLabel : JLabel
   - milesLabel : JLabel
   - statusLabel : JLabel
   - lastActionLabel : JLabel
   --
   + ClientDetailFrame(client: Client)
   - addContent(): void
   + update(client: Client): void
}

class StatusFrame {
   {static} - WIDTH = 300 : int
   {static} - HEIGHT = 200 : int
   - labels : Map<Integer, JLabel>
   --
   + StatusFrame(clients: List<Client>)
   - formatClient(client: Client): String
   - addContent(clients: List<Client>): void
   + update(client: Client): void
}

Subject <|.down. Client

Main "1" -left-> "*" Client : contains >
Main "1" -down-> "*" Flight : contains >
Main *-right- MainFrame

MainFrame "1" -left-> "*" Client : contains >
MainFrame "1" -down-> "*" Flight : contains >
MainFrame *-right- ClientDetailFrame
MainFrame *-right- StatusFrame

JFrame <|-up- ClientDetailFrame
JFrame <|-up- StatusFrame
JFrame <|-up- MainFrame

Observer <|.. ClientDetailFrame
Observer <|.. StatusFrame

Observer "*" <-left- "*" Subject : is observed by <

State "1" -right- "1" Client



@enduml